--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,8 @@
 	"license": "muonw-0",
 	"scripts": {
 		"dev": "vite dev",
-		"buildLocal": "vite build --mode=development",
-		"buildProduction": "vite build --mode=production",
+		"buildLocal": "vite build --mode=development && rm -rf ../_docs && mv docs _docs && mv _docs ../",
+		"buildProduction": "vite build --mode=production && rm -rf ../docs && mv docs ../",
 		"package": "svelte-kit sync && svelte-package",
 		"prepublishOnly": "if [ -z $MU_NPM_PERMIT ]; then echo 'Please use `publishLocal` or `publishPublic`' && exit 1; fi",
 		"publishLocal": "_/NPM_REGISTRY_LOCAL",
