--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,9 @@
 		"buildProduction": "vite build --mode=production && rm -rf ../docs && mv docs ../",
 		"package": "svelte-kit sync && svelte-package",
 		"prepublishOnly": "if [ -z $MU_NPM_PERMIT ]; then echo 'Please use `publishLocal` or `publishPublic`' && exit 1; fi",
-		"publishLocal": "_/NPM_REGISTRY_LOCAL",
-		"publishPublic": "_/NPM_REGISTRY_PUBLIC",
+		"publishLocal": "../_/NPM_REGISTRY_LOCAL",
+		"resetLocal": "../_/NPM_REGISTRY_LOCAL_RESET",
+		"publishPublic": "../_/NPM_REGISTRY_PUBLIC",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -27,22 +28,22 @@
 	},
 	"devDependencies": {
 		"@muonw/mascara": "0.1.11",
-		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.12.0",
+		"@sveltejs/adapter-static": "^2.0.2",
+		"@sveltejs/kit": "^1.15.9",
 		"@sveltejs/package": "^2.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.55.0",
-		"@typescript-eslint/parser": "^5.55.0",
-		"eslint": "^8.36.0",
-		"eslint-config-prettier": "^8.7.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
+		"eslint": "^8.39.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.4",
-		"prettier-plugin-svelte": "^2.9.0",
-		"sass": "^1.59.3",
-		"svelte": "^3.57.0",
-		"svelte-check": "^3.1.4",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.0",
+		"sass": "^1.62.1",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.2.0",
 		"tslib": "^2.5.0",
-		"typescript": "^5.0.2",
-		"vite": "^4.2.0"
+		"typescript": "^5.0.4",
+		"vite": "^4.3.3"
 	},
 	"svelte": "./index.js",
 	"types": "./index.d.ts",
