--- a/app/package.json
+++ b/app/package.json
@@ -2,16 +2,13 @@
 	"name": "project",
 	"version": "0.0.1",
 	"private": true,
-	"license": "muonw-0",
+	"license": "unenforceable",
 	"scripts": {
 		"dev": "vite dev",
 		"buildLocal": "vite build --mode=development && rm -rf ../_docs && mv docs _docs && mv _docs ../",
 		"buildProduction": "vite build --mode=production && rm -rf ../docs && mv docs ../",
 		"package": "svelte-kit sync && svelte-package",
 		"prepublishOnly": "if [ -z $MU_NPM_PERMIT ]; then echo 'Please use `publishLocal` or `publishPublic`' && exit 1; fi",
-		"publishLocal": "../_/NPM_REGISTRY_LOCAL",
-		"resetLocal": "../_/NPM_REGISTRY_LOCAL_RESET",
-		"publishPublic": "../_/NPM_REGISTRY_PUBLIC",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -27,23 +24,23 @@
 		"./*": "./*"
 	},
 	"devDependencies": {
-		"@muonw/mascara": "0.1.11",
+		"@muonw/mascara": "0.1.12",
 		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.15.9",
+		"@sveltejs/kit": "^1.18.0",
 		"@sveltejs/package": "^2.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.59.1",
-		"@typescript-eslint/parser": "^5.59.1",
-		"eslint": "^8.39.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.6",
+		"@typescript-eslint/parser": "^5.59.6",
+		"eslint": "^8.41.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.0",
 		"sass": "^1.62.1",
-		"svelte": "^3.58.0",
-		"svelte-check": "^3.2.0",
-		"tslib": "^2.5.0",
+		"svelte": "^3.59.1",
+		"svelte-check": "^3.3.2",
+		"tslib": "^2.5.2",
 		"typescript": "^5.0.4",
-		"vite": "^4.3.3"
+		"vite": "^4.3.8"
 	},
 	"svelte": "./index.js",
 	"types": "./index.d.ts",
