--- a/app/package.json
+++ b/app/package.json
@@ -26,20 +26,20 @@
 	"devDependencies": {
 		"@muonw/mascara": "0.1.12",
 		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.20.2",
-		"@sveltejs/package": "^2.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.59.11",
-		"@typescript-eslint/parser": "^5.59.11",
-		"eslint": "^8.42.0",
+		"@sveltejs/kit": "^1.21.0",
+		"@sveltejs/package": "^2.1.0",
+		"@typescript-eslint/eslint-plugin": "^5.60.1",
+		"@typescript-eslint/parser": "^5.60.1",
+		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.32.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.63.3",
-		"svelte": "^3.59.1",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.5.3",
-		"typescript": "^5.1.3",
+		"sass": "^1.63.6",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.4",
+		"tslib": "^2.6.0",
+		"typescript": "^5.1.6",
 		"vite": "^4.3.9"
 	},
 	"svelte": "./index.js",
